[tool.poetry]
name = "ama_tweet_fetcher"
version = "0.1.0"
description = ""
authors = ["sbadecker <sba.decker@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.7.8"
pandas = "~1.2.4"
ipykernel = "^5.5.5"
notebook = "^6.4.0"
requests = "~2.25.1"
farm-haystack = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
